--- a/.env.example
+++ b/.env.example
@@ -48,6 +48,6 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-FLW_PUBLIC_KEY=FLWPUBK-xxxxxxxxxxxxxxxxxxxxx-X
-FLW_SECRET_KEY=FLWSECK-xxxxxxxxxxxxxxxxxxxxx-X
-FLW_SECRET_HASH='My_lovelysite123'
+FLW_PUBLIC_KEY=FLWPUBK_TEST-ec896b79ba530ad68c2da3ee028fe98b-X
+FLW_SECRET_KEY=FLWSECK_TEST-d7286d13ee790fc00f543bde3137d8fb-X
+FLW_SECRET_HASH='FLWSECK_TESTf64749fdbadd'
