--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "kingflamez/laravelrave": "^4.2",
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
+        "laravel/ui": "^3.3",
         "questocat/laravel-referral": "^1.0"
     },
     "require-dev": {
