Require spatie package for activity log

--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.3",
-        "questocat/laravel-referral": "^1.0"
+        "questocat/laravel-referral": "^1.0",
+        "spatie/laravel-activitylog": "^4.0"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
