--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "mockery/mockery": "^1.4.2",
         "nunomaduro/collision": "^5.0",
         "phpunit/phpunit": "^9.3.3",
+        "psalm/plugin-laravel": "^1.4",
         "wulfheart/pretty_routes": "^0.3.0"
     },
     "config": {
