work in progress

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "rubick",
+    "name": "Fundz",
     "version": "3.0.4",
     "description": "TailwindCSS HTML Admin Template",
     "author": "Left4code",
